--- a/setores.html
+++ b/setores.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeChella</title>
+    <link rel="icon" href="assets/img/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Raleway:wght@500;700;800&display=swap"
@@ -14,14 +15,12 @@
     <link rel="stylesheet" href="styles/cabecalho.css">
     <link rel="stylesheet" href="styles/banner.css">
     <link rel="stylesheet" href="styles/informacoes.css">
-    <link rel="stylesheet" href="styles/bandas.css">
     <link rel="stylesheet" href="styles/rodape.css">
 </head>
 
 <body>
     <header class="cabecalho">
-        <a href="index.html" class="cabecalho__logo"><img src="assets/img/logo_branca.svg" class="cabecalho__logo"
-                alt="Logotipo do CodeChella"></a>
+        <a href="index.html"><img src="assets/img/logo_branca.svg" alt="Logotipo do CodeChella"></a>
         <input type="checkbox" id="menu" class="cabecalho__menu--selecao">
         <label for="menu" class="cabecalho__menu--area">
             <img src="assets/img/menu.svg" class="cabecalho__menu" alt="menu">
@@ -33,29 +32,26 @@
                 </li>
                 <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="setores.html"
                         class="cabecalho__link">Mapa de Setores</li></a>
-                <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="#"
+                <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="informacoes-gerais.html"
                         class="cabecalho__link">Informações</li></a>
-                <li class="cabecalho__lista-item"><a href="#" class="cabecalho__link">Ingresso</li></a>
+                <li class="cabecalho__lista-item"><a href="ingresso.html" class="cabecalho__link">Ingresso</li></a>
             </ul>
         </nav>
     </header>
 
     <main>
-        <nav class="banner banner--setores">
+        <div class="banner">
+            <span class="banner__imagem banner__imagem--setores"></span>
             <h1 class="banner__titulo">Mapa de Setores</h1>
-        </nav>
+        </div>
         <div class="fundo">
             <div class="informacoes informacoes--setores">
                 <div class="setores--imagem-informacoes">
                     <img src="assets/img/setores/mapa_setores.png" class="informacoes__imagem--setores"
                         alt="Mapa de setores separado por categorias de ingresso">
-                    <img src="assets/img/setores/mapa_setores-tablet.png" class="informacoes__imagem--setores-tablet"
-                        alt="Mapa de setores separado por categorias de ingresso">
-                    <img src="assets/img/setores/mapa_setores-desktop.png" class="informacoes__imagem--setores-desktop"
-                        alt="Mapa de setores separado por categorias de ingresso">
                     <div class="informacoes__lista-item--setores">
                         <h3 class="informacoes__lista--titulo">Legenda:</h3>
-                        <ul class="informacoes__lista--setores">
+                        <ul>
                             <li class="informacoes__item--setores premium">Pista Premium</li>
                             <li class="informacoes__item--setores comum">Pista Comum</li>
                             <li class="informacoes__item--setores terreo">Cadeiras térreo</li>
@@ -70,7 +66,8 @@
             <div class="informacoes--setores-detalhes">
                 <div class="setores--parte-superior">
                     <div class="informacoes__descricao informacoes__descricao--setores">
-                        <div class="informacoes__imagem informacoes__imagem--setores-pista"></div>
+                        <span
+                            class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-pista"></span>
                         <h3 class="informacoes__tiulo--setores">Pista</h3>
                         <p class="informacoes__texto informacoes__texto--setores">Pista convencional, atendida pelos
                             bares e banheiros das laterais do estádio. Espaço amplo, com local para sentar e
@@ -80,7 +77,8 @@
                 </div>
                 <div class="setores--parte-inferior">
                     <div class="informacoes__descricao informacoes__descricao--setores">
-                        <div class="informacoes__imagem informacoes__imagem--setores-premium"></div>
+                        <span
+                            class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-premium"></span>
                         <h3 class="informacoes__tiulo--setores">Pista Premium</h3>
                         <p class="informacoes__texto informacoes__texto--setores">Pista mais próxima do palco, com
                             acesso muito próximo a banheiros e bares num raio de 100m. Todas as pessoas idosas e/ou
@@ -90,7 +88,8 @@
                 </div>
                 <div class="setores--parte-superior">
                     <div class="informacoes__descricao informacoes__descricao--setores">
-                        <div class="informacoes__imagem informacoes__imagem--setores-cadeiras"></div>
+                        <span
+                            class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-cadeiras"></span>
                         <h3 class="informacoes__tiulo--setores">Cadeiras</h3>
                         <p class="informacoes__texto informacoes__texto--setores">Opção de cadeiras térreas ou
                             elevadas.
@@ -114,9 +113,11 @@
                 </div>
             </div>
         </div>
-        <div class="rodape__texto--posicao">
-            <p class="rodape__texto rodape__texto--direita">Desenvolvido por Alura. Projeto fictício sem fins
-                comerciais.</p>
+        <div>
+            <p class="rodape__texto rodape__texto--direita">Desenvolvido por <a
+                    href="https://github.com/JoyceHeinze">Joyce
+                    Heinze</a>. Design por Alura.</p>
+            <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
 </body>
