--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeChella</title>
+    <link rel="icon" href="assets/img/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Raleway:wght@500;700;800&display=swap"
@@ -20,8 +21,7 @@
 
 <body>
     <header class="cabecalho">
-        <a href="index.html" class="cabecalho__logo"><img src="assets/img/logo_branca.svg" class="cabecalho__logo"
-                alt="Logotipo do CodeChella"></a>
+        <a href="index.html"><img src="assets/img/logo_branca.svg" alt="Logotipo do CodeChella"></a>
         <input type="checkbox" id="menu" class="cabecalho__menu--selecao">
         <label for="menu" class="cabecalho__menu--area">
             <img src="assets/img/menu.svg" class="cabecalho__menu" alt="menu">
@@ -33,23 +33,23 @@
                 </li>
                 <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="setores.html"
                         class="cabecalho__link">Mapa de Setores</li></a>
-                <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="#"
+                <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="informacoes-gerais.html"
                         class="cabecalho__link">Informações</li></a>
-                <li class="cabecalho__lista-item"><a href="#" class="cabecalho__link">Ingresso</li></a>
+                <li class="cabecalho__lista-item"><a href="ingresso.html" class="cabecalho__link">Ingresso</li></a>
             </ul>
         </nav>
     </header>
 
     <main>
-        <nav class="banner">
+        <div class="banner">
+            <span class="banner__imagem banner__imagem--home"></span>
             <h1 class="banner__titulo">Boas-vindas ao #CodeChella2023!</h1>
-        </nav>
+        </div>
         <div class="fundo">
             <section class="informacoes">
-                <div class="informacoes__imagem"></div>
+                <span class="informacoes__imagem informacoes__imagem--home"></span>
                 <div class="informacoes__descricao">
-                    <h2 class="informacoes__tiulo"><strong class="informacoes__tiulo--marcador">11 e 12 de
-                            Março</strong><br>Aluródromo de São Paulo</br></h2>
+                    <h2 class="informacoes__tiulo">&lt; 11 e 12 de Março &gt;<br>Aluródromo de São Paulo</h2>
                     <p class="informacoes__texto">Hora de programar nossa memória com novas lembranças! Uma nova
                         experiência sobre música, linguagens e, claro, tecnologia! Somos um festival diverso, com vários
                         artistas e referências. Divirta-se!</p>
@@ -57,10 +57,10 @@
                 </div>
             </section>
             <section class="bandas">
-                <h2 class="bandas__titulo">Line-Up</h2>
+                <h2 class="bandas__titulo">/ Line-Up /</h2>
                 <div class="bandas__datas-linha">
                     <hr class="bandas__data--linha">
-                    <h3 class="bandas__data">Sábado <strong class="bandas__data--marcador">11/03</strong></h3>
+                    <h3 class="bandas__data">Sábado &lt;11/03&gt;</h3>
                     <hr class="bandas__data--linha">
                 </div>
                 <ul class="bandas__lista">
@@ -88,7 +88,7 @@
                 </ul>
                 <div class="bandas__datas-linha">
                     <hr class="bandas__data--linha">
-                    <h3 class="bandas__data">Domingo <strong class="bandas__data--marcador">12/03</strong></h3>
+                    <h3 class="bandas__data">Domingo &lt;12/03&gt;</h3>
                     <hr class="bandas__data--linha">
                 </div>
                 <ul class="bandas__lista2">
@@ -115,7 +115,7 @@
                         <li class="bandas__item bandas__item--pequeno-simples">Rubycat Dolls</li>
                     </div>
                 </ul>
-                <div class="bandas__imagem"></div>
+                <span class="bandas__imagem"></span>
             </section>
         </div>
     </main>
@@ -133,9 +133,11 @@
                 </div>
             </div>
         </div>
-        <div class="rodape__texto--posicao">
-            <p class="rodape__texto rodape__texto--direita">Desenvolvido por Alura. Projeto fictício sem fins
-                comerciais.</p>
+        <div>
+            <p class="rodape__texto rodape__texto--direita">Desenvolvido por <a
+                    href="https://github.com/JoyceHeinze">Joyce
+                    Heinze</a>. Design por Alura.</p>
+            <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
 </body>
