Atualização de documentos

--- a/informacoes-gerais.html
+++ b/informacoes-gerais.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="perguntas-frequentes">
                     <button class="perguntas-frequentes__botao">Quais são os setores disponíveis?</button>
-                    <ul class="perguntas-frequentes__lista">
+                    <ul class="perguntas-frequentes__lista perguntas-frequentes__resposta">
                         <li class="perguntas-frequentes__lista--item">Pista Premium</li>
                         <li class="perguntas-frequentes__lista--item">Pista Comum</li>
                         <li class="perguntas-frequentes__lista--item">Cadeiras térreo</li>
@@ -97,6 +97,8 @@
             <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
